fixed spacing

--- a/components/app/filter/FilterResults.module.css
+++ b/components/app/filter/FilterResults.module.css
@@ -11,7 +11,6 @@
     height: 80%;
     width: 25%;
     border-radius: 1rem;
-    margin-left: 30px;
     display: flex;
     justify-content: center;
     align-items: center;
